Update 1868.ProductOfTwoRunLengthEncodedArrays.java